Updates a bunch of stuff.

--- a/trunk/latexlab/eclipse/war/editor.html
+++ b/trunk/latexlab/eclipse/war/editor.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" language="javascript" src="/editor/editor.nocache.js"></script>
   </head>
   <body>
+  	<img src="/images/stamp.png" style="position:absolute;z-index:10;top:-100px;" />
     <iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1' style="position:absolute;width:0;height:0;border:0"></iframe>
   </body>
 </html>
