Adds secure AuthSub support and eliminates GData client-side access. Adds some UI elements such as an explorer view to FileListDialog.

--- a/trunk/latexlab/eclipse/war/splash.html
+++ b/trunk/latexlab/eclipse/war/splash.html
@@ -30,7 +30,7 @@
 					<img src="/images/latexlab-logo-large.png" />
 					<br />
 					<br />
-					<form action="/docs" method="get">
+					<form action="http://docs.latexlab.org/docs" method="get">
 						<input type="submit" value="Continue" />
 					</form>
 					<br />
