Autoversioning commit:  a non-deltaV client made a change to /trunk/latexlab/eclipse/war/editor-advanced.html

--- a/latexlab/eclipse/war/editor-advanced.html
+++ b/latexlab/eclipse/war/editor-advanced.html
@@ -1,24 +1,3 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-  <head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <link type="text/css" rel="stylesheet" href="/styles/gwt-standard-theme-no-images.css">
-    <link type="text/css" rel="stylesheet" href="/styles/latexlab.css">
-    <title>LaTeX Lab - Editor</title>
-    <script type="text/javascript" language="javascript" src="/codemirror/js/codemirror.js"></script>
-    <script type="text/javascript" language="javascript" src="/editor_advanced/editor_advanced.nocache.js"></script>
-  </head>
-  <body>
-  	<img src="http://clsi.latexlab.org/clsi/lbpx.png" style="position:absolute;z-index:20;top:-10;left:-10;" />
-    <iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1' style="position:absolute;width:0;height:0;border:0"></iframe>
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
-var pageTracker = _gat._getTracker("UA-2071078-6");
-pageTracker._trackPageview();
-} catch(err) {}</script>
-  </body>
-</html>
+.myClass {
+   color: #123456;
+}
